# yandex_backendschool

./: .env.default  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
price_comparison/: __main__.py  runner.py
price_comparison/api/: app.py  middleware.py  payloads.py  schema.py
price_comparison/api/handlers/: __init__.py  base.py  delete.py  imports.py  nodes.py  statistic.py
price_comparison/config/: __init__.py
price_comparison/db/: schema.py
price_comparison/db/migrations/: env.py
price_comparison/db/migrations/versions/: 9469b676d559_initial.py
price_comparison/utils/: pg.py
