[tool.poetry]
name = "yandex_backendschool"
version = "0.1.0"
description = "REST API Service for price comparison"
authors = ["paiflare <paiflare@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
aiohttp = "^3.8.1"
aiomisc = "^16.1.5"
marshmallow = "^3.16.0"
aiohttp-apispec = "^2.2.3"
uvloop = "^0.16.0"
python-decouple = "^3.6"
asyncpgsa = "^0.27.1"
alembic = "^1.8.0"
pydantic = "^1.9.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "1.3.14"
ConfigArgParse = "^1.5.3"
psycopg2 = "^2.9.3"
marshmallow-enum = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
